--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   ],
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.0",
+    "mongodb": "^3.2.6",
     "mongoose": "^5.5.11",
     "morgan": "^1.9.1"
   },
