--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.0",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.11",
+    "mongoose-sequence": "^5.0.1",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
