--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "Chai"
   ],
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.6",
     "mongoose": "^5.5.11",
     "mongoose-sequence": "^5.0.1",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "lodash": "^4.17.11",
     "mocha": "^6.1.4",
     "nodemon": "^1.19.1"
   },
